Hyndman moved to folder. Giles promoted, uptodate.

--- a/Paperpile - Giles.bib
+++ b/Paperpile - Giles.bib
@@ -4,7 +4,7 @@
 @ARTICLE{Giles2010-on,
   title    = "Surgical training and the European Working Time Directive: The
               role of informal workplace learning",
-  author   = "\textbf{Giles, James A}",
+  author   = "Giles, James A",
   journal  = "Int. J. Surg.",
   volume   =  8,
   number   =  3,
@@ -20,7 +20,7 @@
 @ARTICLE{Hill2010-fa,
   title    = "Peer-assisted learning from three perspectives: student, tutor
               and co-ordinator",
-  author   = "Hill, Elspeth and Liuzzi, Francesca and Giles, James A",
+  author   = "Hill, Elspeth and Liuzzi, Francesca and Giles, James",
   journal  = "Clin. Teach.",
   volume   =  7,
   number   =  4,
@@ -36,7 +36,7 @@
 @ARTICLE{Giles2010-rm,
   title    = "Clinical neuroscience attachments: a student's view of
               'neurophobia'",
-  author   = "Giles, James A",
+  author   = "Giles, James",
   journal  = "Clin. Teach.",
   volume   =  7,
   number   =  1,
@@ -51,7 +51,7 @@
 
 @ARTICLE{Hill2012-pq,
   title    = "Teaching in a busy clinic",
-  author   = "Hill, Elspeth J R and \textbf{Giles, James A} and Dornan, Tim",
+  author   = "Hill, Elspeth J R and Giles, James A and Dornan, Tim",
   journal  = "Pract. Neurol.",
   volume   =  12,
   number   =  6,
@@ -65,9 +65,9 @@
 }
 
 @ARTICLE{Luheshi2012-ry,
-  title    = "Sphingosine regulates the {NLRP3-inflammasome} and {IL-1$\beta$}
+  title    = "Sphingosine regulates the {NLRP3-inflammasome} and {IL-1beta}
               release from macrophages",
-  author   = "Luheshi, Nadia M and \textbf{Giles, James A} and Lopez-Castejon, Gloria
+  author   = "Luheshi, Nadia M and Giles, James A and Lopez-Castejon, Gloria
               and Brough, David",
   journal  = "Eur. J. Immunol.",
   volume   =  42,
@@ -87,7 +87,7 @@
               after brain injury caused by oxygen-glucose deprivation in
               organotypic brain slices",
   author   = "Girard, Sylvie and Brough, David and Lopez-Castejon, Gloria and
-              \textbf{Giles, James A}nd Rothwell, Nancy J and Allan, Stuart M",
+              Giles, James and Rothwell, Nancy J and Allan, Stuart M",
   journal  = "Glia",
   volume   =  61,
   number   =  5,
@@ -104,7 +104,7 @@
 @ARTICLE{Giles2015-oq,
   title    = "Requirement for interleukin-1 to drive brain inflammation reveals
               tissue-specific mechanisms of innate immunity",
-  author   = "\textbf{Giles, James A} and Greenhalgh, Andrew D and Davies, Claire L and
+  author   = "Giles, James A and Greenhalgh, Andrew D and Davies, Claire L and
               Denes, Adam and Shaw, Tovah and Coutts, Graham and Rothwell,
               Nancy J and McColl, Barry W and Allan, Stuart M",
   journal  = "Eur. J. Immunol.",
@@ -122,7 +122,7 @@
 
 @ARTICLE{Giles2014-vo,
   title    = "Looking more reflexively at surgical culture",
-  author   = "\textbf{Giles, James A} and Hill, Elspeth J R",
+  author   = "Giles, James A and Hill, Elspeth J R",
   journal  = "Med. Educ.",
   volume   =  48,
   number   =  12,
@@ -137,7 +137,7 @@
 
 @ARTICLE{Hill2014-mk,
   title    = "{Career decisions and gender: the illusion of choice?}",
-  author   = "Hill, Elspeth J R and \textbf{Giles, James A}",
+  author   = "Hill, Elspeth J R and Giles, James A",
   journal  = "Perspect. Med. Educ.",
   volume   =  3,
   number   =  3,
@@ -154,7 +154,7 @@
 @ARTICLE{Giles2015-pr,
   title    = "Examining our hidden curricula: powerful, visible, gendered and
               discriminatory",
-  author   = "\textbf{Giles, James A} and Hill, Elspeth J R",
+  author   = "Giles, James A and Hill, Elspeth J R",
   journal  = "Med. Educ.",
   volume   =  49,
   number   =  3,
@@ -171,7 +171,7 @@
   title    = "``You understand that whole big situation they're in'':
               interpretative phenomenological analysis of peer-assisted
               learning",
-  author   = "Tamachi, Shameena and \textbf{Giles, James A} and Dornan, Tim and Hill,
+  author   = "Tamachi, Shameena and Giles, James A and Dornan, Tim and Hill,
               Elspeth J R",
   journal  = "BMC Med. Educ.",
   volume   =  18,
@@ -188,8 +188,8 @@
 
 @ARTICLE{Giles2018-kx,
   title    = "Neutrophil infiltration to the brain is platelet-dependent, and
-              is reversed by blockade of platelet {GPIb$\alpha$}",
-  author   = "\textbf{Giles, James A} and Greenhalgh, Andrew D and Denes, Adam and
+              is reversed by blockade of platelet {GPIba}",
+  author   = "Giles, James A and Greenhalgh, Andrew D and Denes, Adam and
               Nieswandt, Bernhard and Coutts, Graham and McColl, Barry W and
               Allan, Stuart M",
   journal  = "Immunology",
@@ -212,7 +212,7 @@
               Goyal, Nitin and Alexandrov, Andrei V and Petersen, Nils and
               Kodali, Sreeja and Maier, Ilko L and Psychogios, Marios-Nikos and
               Swisher, Christa B and Inamullah, Ovais and Kansagra, Akash P and
-              \textbf{Giles, James A} and Wolfe, Stacey Q and Singh, Jasmeet and Gory,
+              Giles, James A and Wolfe, Stacey Q and Singh, Jasmeet and Gory,
               Benjamin and De Marini, Pierre and Kan, Peter and Nascimento,
               F{\'a}bio A and Freire, Luis Idrovo and Pandhi, Abhi and
               Mitchell, Hunter and Kim, Joon-Tae and Fargen, Kyle M and Al
@@ -234,7 +234,7 @@
   title    = "{Using electrodiagnostics to define injury patterns amenable to
               nerve transfer surgery in tetraplegia: an illustrative case
               report}",
-  author   = "Hill, Elspeth J R and El-Haj, Madi and \textbf{Giles, James A} and Fox,
+  author   = "Hill, Elspeth J R and El-Haj, Madi and Giles, James A and Fox,
               Ida K",
   journal  = "Spinal Cord Ser Cases",
   volume   =  6,
@@ -260,7 +260,7 @@
               Peter and Lena, Jonathan and Liman, Jan and Arthur, Adam S and
               Elijovich, Lucas and Mccarthy, David J and Saini, Vasu and Wolfe,
               Stacey Q and Mocco, J and Fifi, Johanna T and Nascimento,
-              F{\'a}bio A and \textbf{Giles, James A} and Allen, Michelle and Crosa,
+              F{\'a}bio A and Giles, James A and Allen, Michelle and Crosa,
               Roberto and Fox, W Christopher and Gory, Benjamin and Spiotta,
               Alejandro M",
   journal  = "Neurosurgery",
@@ -279,7 +279,7 @@
   title    = "{Factors associated with therapeutic anticoagulation status in
               patients with ischemic stroke and atrial fibrillation}",
   author   = "Yaghi, Shadi and Liberman, Ava L and Henninger, Nils and Grory,
-              Brian Mac and Nouh, Amre and Scher, Erica and \textbf{Giles, James A}nd
+              Brian Mac and Nouh, Amre and Scher, Erica and Giles, James and
               Liu, Angela and Nagy, Muhammad and Kaushal, Ashutosh and Azher,
               Idrees and Fakhri, Hiba and Espaillat, Kiersten Brown and Asad,
               Syed Daniyal and Pasupuleti, Hemanth and Martin, Heather and Tan,
@@ -335,7 +335,7 @@
               Marios-Nikos and Maier, Ilko and Kim, Joon-Tae and Keyrouz, Saleh
               G and de Havenon, Adam and Petersen, Nils H and Pandhi, Abhi and
               Swisher, Christa B and Inamullah, Ovais and Liman, Jan and
-              Kodali, Sreeja and \textbf{Giles, James A} and Allen, Michelle and Wolfe,
+              Kodali, Sreeja and Giles, James A and Allen, Michelle and Wolfe,
               Stacey Q and Tsivgoulis, Georgios and Cagle, Bradley A and
               Oravec, Chesney S and Gory, Benjamin and De Marini, Pierre and
               Kan, Peter and Rahman, Shareena and Richard, S{\'e}bastien and
@@ -360,7 +360,7 @@
               and Alexandrov, Andrei V and Maier, Ilko L and Psychogios,
               Marios-Nikos and Liman, Jan and Brinton, Daniel and Swisher,
               Christa B and Shah, Shreyash and Inamullah, Ovais and Keyrouz,
-              Salah and Kansagra, Akash P and Allen, Michelle and Giles, James A
+              Salah and Kansagra, Akash P and Allen, Michelle and Giles, James
               A and Wolfe, Stacey Q and Fargen, Kyle M and Gory, Benjamin and
               De Marini, Pierre and Kan, Peter and Nascimento, F{\'a}bio A and
               Almallouhi, Eyad and Petersen, Nils and Kodali, Sreeja and
@@ -381,7 +381,7 @@
 @ARTICLE{Yaghi2020-jv,
   title    = "{Anticoagulation Type and Early Recurrence in Cardioembolic
               Stroke: The {IAC} Study}",
-  author   = "Yaghi, Shadi and Mistry, Eva and Liberman, Ava L and Giles, James A
+  author   = "Yaghi, Shadi and Mistry, Eva and Liberman, Ava L and Giles, James
               and Asad, Syed Daniyal and Liu, Angela and Nagy, Muhammad and
               Kaushal, Ashutosh and Azher, Idrees and Mac Grory, Brian and
               Fakhri, Hiba and Brown Espaillat, Kiersten and Pasupuleti,
