--- a/JamesGilesCV.Rmd
+++ b/JamesGilesCV.Rmd
@@ -8,11 +8,27 @@ twitter: neurogiles
 headcolor: 000088
 date: "`r format(Sys.time(), '%B %Y')`"
 output: vitae::hyndman
+csl: vancouver-superscript-only-year.csl
 ---
 
+\newcounter{bib}
+
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
+knitr::opts_chunk$set(
+  echo = FALSE,
+  warning = FALSE,
+  message = FALSE,
+  cache = FALSE
+)
+
+library(tidyverse)
+library(RefManageR)
 library(vitae)
+
+# Read any bib files
+pubs <- bibliography_entries("Paperpile - Giles.bib")
+#reports <- bibliography_entries("rjhreports.bib")
+#packages <- bibliography_entries("Rpackages.bib")
 ```
 
 # Some stuff about me
@@ -20,6 +36,15 @@ library(vitae)
  * I poisoned myself doing research.
  * I was the first woman to win a Nobel prize
  * I was the first person and only woman to win a Nobel prize in two different sciences.
+
+## Refereed research papers
+
+```{r research-papers}
+
+# Normal articles excluding editorials
+pubs %>%
+  filter(type == "article-journal")
+```
 
 # Education
 
@@ -49,12 +74,7 @@ tribble(
   )
 ```
 
-# Publications
 
-```{r}
-library(dplyr)
-knitr::write_bib(c("vitae", "tibble"), "packages.bib")
+# Journal Publications
 
-bibliography_entries("packages.bib") %>%
-  arrange(desc(author$family), issued)
-```
+
